# libhllapi

./: .gitignore  Makefile.in  PKGBUILD.mingw  README.md  configure.ac  gitsync.sh  hllapi.cbp  link.sh  metainfo.xml.in  publish_debug.sh  run.bat
.github/workflows/: codeql-analysis.yml  codeql.yml  msvc.yml  msys2.yml  publish.yml
debian/: changelog  control  libhllapi.dsc  rules
doxygen/: doxyfile.in
locale/: Makefile.in  libhllapi.pot  pt_BR.po
rpm/: _service  lib3270-hllapi-bindings.spec  libhllapi.spec  pw3270-plugin-dbus.spec  pw3270-plugin-hllapi.spec
sdk/: dynamic.pc.in  hllapi.pc.in  libhllapi.pc.in
snippets/: sample.vbs
src/core/: actions.cc  calls.cc  controller.cc  cursor.cc  get.cc  hllapi.cc  keyboard.cc  private.h  set.cc  tools.cc
src/core/windows/: init.cc  resources.rc.in  tools.cc
src/hllapi/: calls.cc  client.h
src/hllapi/windows/: resources.rc.in
src/include/: config.h.in
src/include/lib3270/: hllapi.h
src/ipc3270c/linux/: globals.h  gobject.c  main.c  misc.c
src/ipc3270c/windows/: main.c  resources.rc.in
src/plugin/linux/: gobject.c  main.c  misc.c
src/plugin/windows/: main.c  private.h
src/testprogram/: ipc3270c.c  testprogram.c  testprogram.cc
src/testprograms/: hllapi.c  ipc3270c.c
win/: Makefile-ci.msc  Makefile.msc  ci-build.sh  dump.sh  hllapi.nsi  hllapi.nsi.in  install-cross.sh  pack.sh
win/x86_32/: mingw32-libhllapi.spec
win/x86_64/: mingw64-libhllapi.spec
